[FIX] Fixed alerts wrap

--- a/src/css/Components/Alerts/lastAlerts.scss
+++ b/src/css/Components/Alerts/lastAlerts.scss
@@ -48,69 +48,70 @@
         align-items: start;
         margin-left: 20px;
         margin-right: 20px;
-        width: 100%;
+        width: calc(100% - 40px);
         min-height: 80px;
         max-height: 600px;
         overflow-y: auto;
         flex-wrap: wrap;
 
-        .alert-container {
+        .w-100 {
+            width: 100%;
+            gap: 10px;
             display: flex;
-            flex-direction: column;
-            background-color: white;
-            border-radius: 26px;
-            height: 112px;
-            width: 49%;
+            flex-wrap: wrap;
+            flex-direction: row;
 
-            .content {
-                width: calc(100% - 20px);
-                height: 100%;
-                margin: 5px 10px 5px 10px;
-
-                .header {
-                    display: flex;
-                    flex-direction: row;
-                    align-items: center;
-                    justify-content: space-between;
-
-                    .user-profile {
-                        flex: 0.7;
-                    }
-
-                    .see-more-inverted {
-                        flex: 0.3;
+            .alert-container {
+                display: flex;
+                flex-direction: column;
+                background-color: white;
+                border-radius: 26px;
+                height: 112px;
+                width: 49%;
+    
+                .content {
+                    width: calc(100% - 20px);
+                    height: 100%;
+                    margin: 5px 10px 5px 10px;
+    
+                    .header {
                         display: flex;
                         flex-direction: row;
-                        justify-content: start;
                         align-items: center;
-                        color: #4F23E2;
-                        font-size: 18px;
-                        font-weight: 600;
-                        font-family: Inter;
-
-                        .img {
-                            margin-left: 4px;
+                        justify-content: space-between;
+    
+                        .user-profile {
+                            flex: 0.7;
+                        }
+    
+                        .see-more-inverted {
+                            flex: 0.3;
+                            display: flex;
+                            flex-direction: row;
+                            justify-content: start;
+                            align-items: center;
+                            color: #4F23E2;
+                            font-size: 18px;
+                            font-weight: 600;
+                            font-family: Inter;
+    
+                            .img {
+                                margin-left: 4px;
+                            }
                         }
                     }
+    
+                    .body {
+                        font-family: Inter;
+                        font-size: 14px;
+                        font-weight: 600;
+                        color: black;
+                        margin-top: 3px;
+                    }
                 }
-
-                .body {
-                    font-family: Inter;
-                    font-size: 14px;
-                    font-weight: 600;
-                    color: black;
-                    margin-top: 3px;
-                }
+    
             }
-
         }
-    }
-}
 
-.w-100 {
-    width: 100%;
-    gap: 10px;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
+    }
 }
